--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react-native": "^0.69.6"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
