--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "expo-sqlite": "~10.3.0",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
