--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.2",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-splash-screen": "~0.16.2",
+    "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
@@ -19,8 +22,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "typescript": "^4.8.3",
-    "expo-sqlite": "~10.3.0",
-    "expo-splash-screen": "~0.16.2"
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
